docs/api/qiskit/0.24/qiskit.transpiler.passes.Size.mdx
---
title: Size
description: API reference for qiskit.transpiler.passes.Size
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Size
---

<span id="qiskit-transpiler-passes-size" />

# qiskit.transpiler.passes.Size

<Class id="qiskit.transpiler.passes.Size" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/transpiler/passes/analysis/size.py" signature="Size(*args, **kwargs)">
  Calculate the size of a DAG circuit.

  The result is saved in `property_set['size']` as an integer.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.passes.Size.__init__" name="__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                  |                              |
  | ------------------------------------------------------------------------------------------------ | ---------------------------- |
  | [`__init__`](#qiskit.transpiler.passes.Size.__init__ "qiskit.transpiler.passes.Size.__init__")() | Initialize self.             |
  | [`name`](#qiskit.transpiler.passes.Size.name "qiskit.transpiler.passes.Size.name")()             | Return the name of the pass. |
  | [`run`](#qiskit.transpiler.passes.Size.run "qiskit.transpiler.passes.Size.run")(dag)             | Run the Size pass on dag.    |

  ## Attributes

  |                                                                                                                                          |                                             |
  | ---------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.passes.Size.is_analysis_pass "qiskit.transpiler.passes.Size.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.passes.Size.is_transformation_pass "qiskit.transpiler.passes.Size.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.passes.Size.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.passes.Size.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.Size.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.Size.run" name="run" signature="run(dag)">
    Run the Size pass on dag.
  </Function>
</Class>

