docs/api/qiskit/0.39/qiskit.transpiler.passes.Size.mdx
---
title: Size (v0.39)
description: API reference for qiskit.transpiler.passes.Size in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.Size
---

# Size

<Class id="qiskit.transpiler.passes.Size" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/passes/analysis/size.py" signature="Size(*args, **kwargs)" modifiers="class">
  Bases: [`qiskit.transpiler.basepasses.AnalysisPass`](qiskit.transpiler.AnalysisPass "qiskit.transpiler.basepasses.AnalysisPass")

  Calculate the size of a DAG circuit.

  The result is saved in `property_set['size']` as an integer.

  **Parameters**

  **recurse** – whether to allow recursion into control flow. If this is `False` (default), the pass will throw an error when control flow is present, to avoid returning a number with little meaning.

  ## Methods

  <span id="qiskit-transpiler-passes-size-name" />

  ### name

  <Function id="qiskit.transpiler.passes.Size.name" signature="Size.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-size-run" />

  ### run

  <Function id="qiskit.transpiler.passes.Size.run" signature="Size.run(dag)">
    Run the Size pass on dag.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.Size.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.Size.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

